# api-datahealth

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  diag_all_schemas.py  diag_schema.py  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  schemas.txt
app/: __init__.py  auth.py  config.py  data_loader.py  db.py  exceptions.py  main.py
app/routers/: cnes.py  indicadores.py  oncologia.py  pni.py  sia.py  sih.py  sim.py  sinan.py  sinasc.py  system.py  territorios.py
app/schemas/: base.py  sim.py
tests/: test_sim.py
